--- a/ES2016문법/ap05.JS/ap02-09.ex01.html
+++ b/ES2016문법/ap05.JS/ap02-09.ex01.html
@@ -9,4 +9,22 @@
 
 </body>
 </html>
-
+<script>
+    //리터럴을 이용한 객체 생성
+    var dog = {
+        name : "Fido",
+        weight : 40,
+        breed : "Mixed",
+        loves : [ "walks", "fetching balls"],
+    };
+
+    //태그를 JS객체로 바꾸기
+    //<p id="a1" class="b1" style="" src="" href="">id속성</p>
+    var p = {
+        id : "a1",
+        class : "b1",
+        style : "",
+        src : "",
+        href : "",
+    };
+</script>
