--- a/ES2016문법/ap05.JS/ap02-11.Object배열.html
+++ b/ES2016문법/ap05.JS/ap02-11.Object배열.html
@@ -1,3 +1,37 @@
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+
+@myturn80
+Learn Git and GitHub without any code!
+Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
+
+
+sjydevildaum
+/
+20210124
+1
+00
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+20210124/ES2016문법/ap05.JS/ap02-11.Object배열.html
+
+etrytuyj 2021-01-23
+Latest commit e1dd757 1 minute ago
+ History
+ 0 contributors
+115 lines (92 sloc)  2.43 KB
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -34,9 +68,9 @@
         Object Arrary를 바인딩하는 방법 학습.
         Object Arrary 예시)
         var objarray = [
-            { text: 'One', value: 'A' },
-            { text: 'Two', value: 'B' },
-            { text: 'Three', value: 'C' }
+        { text: 'One', value: 'A' },
+        { text: 'Two', value: 'B' },
+        { text: 'Three', value: 'C' }
         ];
 
         1. objarray 에 { text: 'Four', value: 'D' } 를
@@ -55,3 +89,61 @@
 </body>
 
 </html>
+<script>
+    var objarray = [{
+            text: 'One',
+            value: 'A'
+        },
+        {
+            text: 'Two',
+            value: 'B'
+        },
+        {
+            text: 'Three',
+            value: 'C'
+        }
+    ];
+
+    // Create
+    objarray[objarray.length] = {
+        text: 'Four',
+        value: 'D'
+    };
+    objarray.push({
+        text: 'Four',
+        value: 'D'
+    });
+
+    // Update:
+    objarray[1] = {
+        text: '2',
+        value: '2'
+    };
+
+    // Delete
+    delete objarray[2];
+
+
+    // Search
+    var arrsearh = objarray.filter( function(item, index, items){
+        return item["text"] === "One";
+    });
+    console.log( arrsearh ); // [ { text: 'One', value: 'A' }]
+
+    // map 메서드: 새로운 배열 만들기
+    var arrmap = objarray.map(function(item, index, items){
+        return index < 3 ? item: null;
+    });
+    console.log( arrmap ); // arrmap.length === 3
+
+
+
+    // reduce 메서드: 배열을 줄이는 메서드.
+
+
+
+    // Sort
+    objarray.sort( function(){
+
+    });
+</script>
