--- a/ES2016문법/ap03.node사용법/npm사용법.html
+++ b/ES2016문법/ap03.node사용법/npm사용법.html
@@ -24,7 +24,7 @@
     </thead>
     <tbody>
         <tr>
-            <td style="border:1px solid gray; border-collapse:collapse;padding:5px;">프로젝트 초기화</td>
+            <td style="border:1px solid gray; border-collapse:collapse;padding:5px;">프로젝트 초기화. package.json 파일 생성</td>
             <td style="border:1px solid gray; border-collapse:collapse;padding:5px;">npm init</td>
             <td style="border:1px solid gray; border-collapse:collapse;padding:5px;">yarn init</td>
         </tr>
