--- a/Vuejs/vue08Vue동작원리/vue08-01.defineProperty.html
+++ b/Vuejs/vue08Vue동작원리/vue08-01.defineProperty.html
@@ -41,15 +41,15 @@
     <pre>
         Vue 를 이용하여 #app1 의 {{msg}} 에 "Hello" 를 출력한다.
         Vue 의 인스턴스 명은 vm1 으로 만드시오. var vm1 = new Vue();
-        예제) vue06-03.hello-vue.html 을 참조. 
+        예제) vue06-03.hello-vue.html 을 참조.
     </pre>
-    <div id="app">
+    <div id="app1">
         <h2>{{msg}}</h2>
     </div>
 
     <hr color="red">
     <pre>
-        뷰 인스턴스의 
+        뷰 인스턴스의
             data: {
                 msg: "Hello",
             }
@@ -57,7 +57,7 @@
 
         #app2 에 Object.defineProperty() 메서드의 get, set 설정하고 "123" 을 출력한다.
         1. document.getElementById() 를 사용하여 #app2 엘리먼트를 찾는다.
-        2. 엘리먼트의 innerHTML 또는 innerText 프러퍼티에 설정 
+        2. 엘리먼트의 innerHTML 또는 innerText 프러퍼티에 설정
 
     </pre>
     <h2 id="app2">
@@ -66,3 +66,31 @@
 </body>
 
 </html>
+
+<!-- vue 플러그인 임포트   -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"> /* JSX를 자바스크립트로 변환 */</script>
+<script src="https://unpkg.com/vue@2.5.16/dist/vue.js">/* vue 플러그인 임포트 */</script>
+<script>
+    const vm1 = new Vue({
+        el : '#app1',
+        data : {
+            msg : 'Hello',
+        },
+    });
+
+    var div2 = document.getElementById("app2");
+    var data = { };
+    Object.defineProperty( data, "msg", {
+        get : function(){
+            return div2.innerHTML;
+        },
+        set : function (value) {
+            div2.innerHTML = value;
+        },
+    });
+
+    //debugger;
+    data.msg = "aaa";   //set 기능이 사용됨. 화면이 바뀌게 됨.
+    console.log(data.msg);
+    data["msg"] = "abc";    //set 기능이 사용됨. 화면이 바뀐다.
+</script>
