--- a/Vuejs/vue06Vue입문/vue06-02.hello-jquery.html
+++ b/Vuejs/vue06Vue입문/vue06-02.hello-jquery.html
@@ -17,7 +17,16 @@
         <p></p>
         <button>click me</button>
     </div>
-    
+
 </body>
 
 </html>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> /* jQuery 플러그인 임포트 */</script>
+<script>
+    $("#app > p").text("Hello jQuery");
+    $("#app > button").on ("click", function () {
+        alert("h1");
+    });
+</script>
