--- a/Vuejs/vue11인스턴스/vue11-01.인스턴스생성do0201.html
+++ b/Vuejs/vue11인스턴스/vue11-01.인스턴스생성do0201.html
@@ -16,7 +16,7 @@
 <body>
     <xmp>
       학습할 내용
-        Vue 인스턴스 속성은 e dt mc^2 life cycel 이다.
+        Vue 인스턴스 속성은 e dt mc^2 life cycle 이다.
         Vue 인스턴스 생성 방법을 반복 학습한다.
         CSS 태그 선택자에 대해 학습한다.
 
@@ -34,15 +34,53 @@
         {{ message }}, app1
     </div>
 
-    
 
-    <div>
+
+    <div id="app2">
         {{ message }}, app2
     </div>
 
-    
+
 </body>
 
 </html>
 
 <!-- vue 플러그인 임포트   -->
+
+<!-- vue 플러그인 임포트   -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"> /* JSX를 자바스크립트로 변환 */</script>
+<script src="https://unpkg.com/vue@2.5.16/dist/vue.js">/* vue 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vuex@3.3.0/dist/vuex.js"> /* vuex 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vue-router@3.1.6/dist/vue-router.js"> /* vue 라우터 플러그인 임포트 */</script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"> /* axios 플러그인 임포트 */</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> /* jQuery 플러그인 임포트 */</script>
+<script>
+new Vue({
+    /* edtmc^2w */
+    el: "#app2",
+    data: {
+      message : "실습 완성 축하!!!!",
+    },
+    //template: ``,
+    methods: {
+
+    },
+    components: {
+        /* 컴포넌트 등록. 예시) "태그명" : 컴포넌트명 */
+
+    },
+    computed: {
+
+    },
+    watch: {
+
+    },
+    mounted: function() {
+        console.log("mounted");
+    },
+    updated: function() {
+        console.log("updated");
+    },
+});
+</script>
+
