--- a/Vuejs/vue08Vue동작원리/vue08-01.defineProperty.html
+++ b/Vuejs/vue08Vue동작원리/vue08-01.defineProperty.html
@@ -68,29 +68,41 @@
 </html>
 
 <!-- vue 플러그인 임포트   -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"> /* JSX를 자바스크립트로 변환 */</script>
 <script src="https://unpkg.com/vue@2.5.16/dist/vue.js">/* vue 플러그인 임포트 */</script>
 <script>
+    // Vue를 이용하여 #app 의 {{msg}} 부분에 "Hello" 를 출력하라. 
     const vm1 = new Vue({
-        el : '#app1',
-        data : {
-            msg : 'Hello',
+        /* edtmc^2w */
+        el: "#app1",
+        data: {
+            msg: "Hello",
         },
     });
 
-    var div2 = document.getElementById("app2");
-    var data = { };
-    Object.defineProperty( data, "msg", {
-        get : function(){
-            return div2.innerHTML;
-        },
-        set : function (value) {
-            div2.innerHTML = value;
-        },
-    });
+    /*
+    data: {
+        msg: "Hello",
+    }
+    의 기능을 직접 구현하여 본다
 
-    //debugger;
-    data.msg = "aaa";   //set 기능이 사용됨. 화면이 바뀌게 됨.
-    console.log(data.msg);
-    data["msg"] = "abc";    //set 기능이 사용됨. 화면이 바뀐다.
+    #app2 에 Object.defineProperty() 메서드의 get, set 설정하고 "123" 을 출력한다.
+    1. document.getElementById() 를 사용하여 #app2 엘리먼트를 찾는다.
+    2. 엘리먼트의 innerHTML 또는 innerText 프러퍼티에 설정
+    */
+   var app2 = document.getElementById("app2");
+   var data = { };
+   Object.defineProperty( data, "msg",  {
+        get: function(){
+            return app2.innerHTML; /* 이자리에 있는 정보를 가져오다 */
+        },
+        set: function(value){
+            app2.innerHTML = value;
+        },
+   });
+
+   debugger;
+   data.msg = "aaa"; // set 기능이 사용됨. 화면이 바뀐다.
+   console.log( data.msg); // get 기능이 사용됨.
+   data["msg"] = "abc"; // set 기능이 사용됨. 화면이 바뀐다.
+
 </script>
