--- a/Vuejs/vue11인스턴스/vue11-01.인스턴스생성do0201.html
+++ b/Vuejs/vue11인스턴스/vue11-01.인스턴스생성do0201.html
@@ -20,8 +20,8 @@
         Vue 인스턴스 생성 방법을 반복 학습한다.
         CSS 태그 선택자에 대해 학습한다.
 
-      실습 1.
-        2개의 "{{message}}" 중에 첫번째에만 "실습 완성 축하!!!!!" 가 나오게 작성하시오.
+    실습 1.
+        2개의 "{{message}}" 중에 두번째에만 "실습 완성 축하!!!!!" 가 나오게 작성하시오.
         주어진 태그를 변경하지 않고 완성하는 것을 첫번째로 하나
         태그를 바꾸거나 태그의 속성을 추가해서 완성해도 됩니다.
 
@@ -34,53 +34,23 @@
         {{ message }}, app1
     </div>
 
-
-
     <div id="app2">
         {{ message }}, app2
     </div>
-
 
 </body>
 
 </html>
 
 <!-- vue 플러그인 임포트   -->
-
-<!-- vue 플러그인 임포트   -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"> /* JSX를 자바스크립트로 변환 */</script>
-<script src="https://unpkg.com/vue@2.5.16/dist/vue.js">/* vue 플러그인 임포트 */</script>
-<script src="https://unpkg.com/vuex@3.3.0/dist/vuex.js"> /* vuex 플러그인 임포트 */</script>
-<script src="https://unpkg.com/vue-router@3.1.6/dist/vue-router.js"> /* vue 라우터 플러그인 임포트 */</script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"> /* axios 플러그인 임포트 */</script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> /* jQuery 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vue@2.5.16/dist/vue.js"> /* vue 플러그인 임포트 */</script>
 <script>
-new Vue({
-    /* edtmc^2w */
-    el: "#app2",
-    data: {
-      message : "실습 완성 축하!!!!",
-    },
-    //template: ``,
-    methods: {
+  new Vue({
+      /* edtmc^2w */
+      el: "#app2",
+      data: {
+        message : "실습 완성 축하!!!!!"
+      }
+  });
 
-    },
-    components: {
-        /* 컴포넌트 등록. 예시) "태그명" : 컴포넌트명 */
-
-    },
-    computed: {
-
-    },
-    watch: {
-
-    },
-    mounted: function() {
-        console.log("mounted");
-    },
-    updated: function() {
-        console.log("updated");
-    },
-});
 </script>
-
