--- a/Vuejs/vue13인스턴스속성/vue13-10.인스턴스속성do0508.html
+++ b/Vuejs/vue13인스턴스속성/vue13-10.인스턴스속성do0508.html
@@ -62,4 +62,44 @@
 
 </html>
 
+
 <!-- vue 플러그인 임포트   -->
+<script src="https://unpkg.com/vue@2.5.16/dist/vue.js">/* vue 플러그인 임포트 */</script>
+
+<script>
+new Vue({
+    /* edtmc^2w */
+    el: "#app",
+    data: {
+        message : "Hello, Vue.js",
+        methodscopy : null,
+        watchcopy : null,
+        computedcopy : null,
+
+    },
+    //template: ``,
+    methods: {
+        reverseMsg : function (event) {
+            //this.$data.methodscopy = this.$data.message;
+            this.$set( this.$data, "methodscopy", this.$data.message);
+        }
+    },
+    components: {
+        /* 컴포넌트 등록. 예시) "태그명" : 컴포넌트명 */
+
+    },
+    computed: {
+
+    },
+    watch: {
+
+    },
+    mounted: function() {
+        console.log("mounted");
+    },
+    updated: function() {
+        console.log("updated");
+    },
+});
+
+</script>
