--- a/Vuejs/vue06Vue입문/vue06-02.hello-jquery.html
+++ b/Vuejs/vue06Vue입문/vue06-02.hello-jquery.html
@@ -21,12 +21,10 @@
 </body>
 
 </html>
-
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> /* jQuery 플러그인 임포트 */</script>
 <script>
-    $("#app > p").text("Hello jQuery");
-    $("#app > button").on ("click", function () {
-        alert("h1");
+    $("#app > p").text("Hello, jquery");
+    $("#app > button").on("click", function(event){
+        alert("hi");
     });
 </script>
