--- a/Vuejs/vue06Vue입문/vue06-03.hello-vue.html
+++ b/Vuejs/vue06Vue입문/vue06-03.hello-vue.html
@@ -32,25 +32,29 @@
 
     <div id="app">
         <p>{{ message }}</p>
-        <button onclick="clickBtnjs">click me</button>
-        <button v-on:click="clickBtn">click me</button>
+        <button v-on:click="clickBtn">vue click me</button>
+
+        <hr>
+
+        <button onclick="clickBtnjs">javascript click me</button>
     </div>
 </body>
 
 </html>
 
 <!-- vue 플러그인 임포트   -->
-
 <script src="https://unpkg.com/vue@2.5.16/dist/vue.js">/* vue 플러그인 임포트 */</script>
 <script>
-    new Vue ({
-        el : '#app',
-        data : {
-            message : 'Hello vue.js',
+
+    new Vue({
+        el: "#app", /* 찾기 */
+        data: {
+            message: "Hello, Vue.js",
         },
-        methods : {
-            clickBtn : function() {
-                alert("h1");
+        methods: {
+            clickBtn: function(event){
+                this.$data.message = "Hello~~~~~~";
+                alert("hi");
             }
         }
     });
