--- a/Vuejs/vue13인스턴스속성/vue13-05.인스턴스data속성변경set.html
+++ b/Vuejs/vue13인스턴스속성/vue13-05.인스턴스data속성변경set.html
@@ -89,8 +89,6 @@
             4. spread 연산자 방식 ==> 배열을 새로 만든 뒤 할당. ES6 에서만 가능.
                 var arr_copy=[...this.$data.msg4, 70];
 
-
-
         실행 순서와 결과 예시
             (1) [100, 2, 3, 4, 5]       <== 방법1을 적용
             (2) [100, 300, 3, 4, 5]     <== 방법2을 적용
@@ -112,9 +110,6 @@
 </html>
 
 <!-- vue 플러그인 임포트   -->
-
-
-<!-- vue 플러그인 임포트   -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"> /* JSX를 자바스크립트로 변환 */</script>
 <script src="https://unpkg.com/vue@2.5.16/dist/vue.js">/* vue 플러그인 임포트 */</script>
 <script src="https://unpkg.com/vuex@3.3.0/dist/vuex.js"> /* vuex 플러그인 임포트 */</script>
@@ -122,61 +117,48 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"> /* axios 플러그인 임포트 */</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> /* jQuery 플러그인 임포트 */</script>
 <script>
-new Vue({
-    /* edtmc^2w */
-    el: "#app",
-    data: {
-        arr : [1 ,2 ,3 ,4 ,5]
-    },
-    //template: ``,
-    methods: {  //이벤트 핸들러
-        change1 : function() {
-            console.log(event.target);
-            this.$data.arr[0] = 100;
-            console.log(this.$data.arr);
-            //this.$data.arr[0] = 100;
-            this.$set( this.$data.arr, 0, 100 );
+    new Vue({
+        /* edtmc^2w */
+        el: "#app",
+        data: {
+            arr: [1,2,3,4,5],
         },
-        change2 : function() {
-            console.log(event.target);
+        //template: ``,
+        methods: {
+            change1: function(event){
+                console.log(event.target);
 
-            //this.$data.arr[1] = 300;
-            Vue.set( this.$data.arr, 1, 300 );
-        },
-        change3 : function() {
-            console.log(event.target);
-            // [3, 4, 5]
-            //splice() 메서드 안에는 재할당 기능이 내장되어 있다.
-            this.$data.arr.splice(0, 2);    //0부터 2번 전까지 지우고 새로운 배열을 만든다.
-        },
-        change4 : function() {
-            console.log(event.target);
+                this.$data.arr[0] = 100;
+                console.log(this.$data.arr);
 
-            console.log(this.$data.arr);    //[3, 4, 5]
-            // spread 연산자
-            // var arr = [500, 3, 4, 5, 70]
-            //...this.$data.arr = 3, 4, 5
-            var arr_copy = [500, ...this.$data.arr, 70 ]
-            //this.$data.arr = arr;
-            this.$set( this.$data, "arr", arr_copy)
+                //this.$data.arr[0] = 100;
+                this.$set( this.$data.arr, 0, 100);
+            },
+            change2: function(event){
+                console.log(event.target);
+                //this.$data.arr[1] = 300;
+                Vue.set( this.$data.arr, 1, 300);
+            },
+            change3: function(event){
+                console.log(event.target);
+                // [3,4,5]
+                // splice() 메서드 안에는 재할당 기능이 내장되어 있다.
+                this.$data.arr.splice(0,2); // 0부터 2번 전까지 지우고 새로운 배열을 만든다.
+            },
+            change4: function(event){
+                console.log(event.target);
+
+                console.log(this.$data.arr); // [3,4,5]
+
+                // spread 연산자
+                //var arr = [500, 3,4,5, 70 ]
+                // ...this.$data.arr = 3, 4, 5
+                var arr_copy = [500, ...this.$data.arr, 70 ];
+
+                //this.$data.arr = arr_copy;
+
+                this.$set( this.$data , "arr" , arr_copy)
+            },
         }
-    },
-    components: {
-        /* 컴포넌트 등록. 예시) "태그명" : 컴포넌트명 */
-
-    },
-    computed: {
-
-    },
-    watch: {
-
-    },
-    mounted: function() {
-        console.log("mounted");
-    },
-    updated: function() {
-        console.log("updated");
-    },
-});
-
+    });
 </script>
