--- a/Vuejs/vue41axios실습/vue41-03.axios사용법.html
+++ b/Vuejs/vue41axios실습/vue41-03.axios사용법.html
@@ -27,7 +27,7 @@
             <p>외부 함수 호출 기능을 추가하기 위해서는 서버 기능이 필요합니다.</p>
             <p>
                 1. 실행 전에  서버를 실행하세요.
-                <a href="#" onClick="window.open('../vue09서버통신/vue09-03.Node서버실행.html','vue09-03.Node서버실행','width=800,height=650,toolbar=no,menubar=no,scrollbars=no,resizable=yes');return false;" rel="nofollow">vue09-03.Node서버실행</a>
+                <a href="#" onClick="window.open('../../ES2016문법/ap09.서버통신/ap09-03.Node서버실행.html','Node서버실행','width=700,height=850,toolbar=no,menubar=no,scrollbars=no,resizable=yes');return false;" rel="nofollow">Node서버실행</a>
             </p>
             <p>
                 2. 브라우저로 서버 실행 여부 확인<br>
