--- a/Vuejs/vue61ToDo/vue61ToDo.html
+++ b/Vuejs/vue61ToDo/vue61ToDo.html
@@ -15,9 +15,8 @@
 </head>
 <body>
     <div style="margin: 40px 0 0 30px;">
-        <a href="#" onClick="window.open('../../ES2016문법/ap01.docs/npm사용법.html','npm사용법','width=800,height=400,toolbar=no,menubar=no,scrollbars=no,resizable=yes');return false;" rel="nofollow">npm 사용법</a>
+        ※ 실행 전에  서버를 실행하세요. <a href="#" onClick="window.open('../../ES2016문법/ap09.서버통신/ap09-03.Node서버실행.html','Node서버실행','width=700,height=850,toolbar=no,menubar=no,scrollbars=no,resizable=yes');return false;" rel="nofollow">Node서버실행</a>
         <br>
-        ※ 실행 전에  서버를 실행하세요. <a href="#" onClick="window.open('../vue09서버통신/vue09-03.Node서버실행.html','vue09-03.Node서버실행','width=800,height=650,toolbar=no,menubar=no,scrollbars=no,resizable=yes');return false;" rel="nofollow">vue09-03.Node서버실행</a>
         <br>
         <a href="#" onClick="window.open('https://vuejstodo-aa185.firebaseapp.com/','Todo앱확인','width=800,height=700,toolbar=no,menubar=no,scrollbars=no,resizable=yes');return false;" rel="nofollow">TODO 애플리케이션 구현 확인 링크</a>
     </div>
