--- a/Vuejs/vue22조건지시자/vue22-01디렉티브v-if.html
+++ b/Vuejs/vue22조건지시자/vue22-01디렉티브v-if.html
@@ -38,7 +38,6 @@
             렌더링 안됨
             display:none; <--> display:block; 를 사용.
 
-
         [참조] 페이지 104
 
         https://kr.vuejs.org/v2/guide/conditional.html
@@ -85,7 +84,7 @@
         </div>
     </div>
 
-    <h2>v-if/v-else-if/v-else 연습 4 : 실습(순차적인것)</h2>
+    <h2>v-if/v-else-if/v-else 연습 4 : 실습</h2>
     <div id="app5">
         <button v-on:click="clickBind">클릭</button>
         <span v-if="type === 1">
@@ -106,52 +105,49 @@
 </html>
 
 <!-- vue 플러그인 임포트   -->
-
-<!-- vue 플러그인 임포트   -->
 <script src="https://unpkg.com/vue@2.5.16/dist/vue.js">/* vue 플러그인 임포트 */</script>
 <script>
     new Vue({
         /* edtmc^2w */
         el: "#app1",
         data: {
-            awesome : true,
+            awesome: true,
         },
-
     });
 
     new Vue({
         /* edtmc^2w */
         el: "#app2",
         data: {
-            awesome : false,
+            awesome: false,
         },
-
     });
 
     new Vue({
         /* edtmc^2w */
         el: "#app3",
         data: {
-            awesome : true,
+            awesome: false,
         },
+        //template: ``,
         methods: {
-            clickBind : function (event) {
+            clickBind: function(event){
                 console.log( event.target );
-
                 /*
-                //awesome이 true 이면 false로 아니면 true 로
-                if ( this.$data.awesome ) {
+                //awesome 이 true 이면 false로 아니면 true 로
+                if( this.$data.awesome ){
                     //this.$data.awesome = false;
-                    this.$set(this.$data, "awesome", false)
+                    this.$set(this.$data, "awesome", false )
                 }
                 else {
-                    this.$set(this.$data, "awesome", true)
+                    this.$set(this.$data, "awesome", true )
                 }
                 */
-               this.$set(this.$data, "awesome", !this.$data.awesome);
+                this.$set( this.$data, "awesome", !this.$data.awesome );
             }
         },
     });
+
     new Vue({
         /* edtmc^2w */
         el: "#app5",
@@ -160,18 +156,19 @@
         },
         //template: ``,
         methods: {
-            clickBind: function (event) {
-                console.log(event.target);
+            clickBind: function(event){
+                console.log( event.target );
 
-                var type = this.$data.type + 1;
-                if ( type >= 4 ) {
+                var type = this.$data.type + 1 ;
+                if( type >= 4 ) {
                     type = 0;
                 }
-                //this.$data.type = this.$data.type + 1;
+
+                //this.$data.type = type ;
                 this.$set( this.$data, "type", type );
 
                 /*
-                    this.$set(this.$data, "type", (this.$data.type + 1)%4);
+                this.$set( this.$data, "type", (this.$data.type+1) % 4 );
                 */
             }
         },
@@ -192,5 +189,6 @@
             console.log("updated");
         },
     });
+
 
 </script>
