--- a/Vuejs/vue22조건지시자/vue22-03디렉티브v-show.html
+++ b/Vuejs/vue22조건지시자/vue22-03디렉티브v-show.html
@@ -59,16 +59,15 @@
 <script>
     new Vue({
         /* edtmc^2w */
-        el: "#app",
+        el: "#app1",
         data: {
-            a : true,
+            a: true,
         },
-        //template: ``,
         methods: {
-            clickBind : function (event) {
+            clickBind: function(event){
                 console.log( event.target );
                 //this.$data.a = !this.$data.a;
-                this.$data.$set(this.$data, "a", !this.$data.a);
+                this.$set(this.$data, "a", !this.$data.a);
             }
         },
     });
