--- a/Vuejs/vue23반복지시자/vue23-03.지시자.bi06.html
+++ b/Vuejs/vue23반복지시자/vue23-03.지시자.bi06.html
@@ -38,6 +38,9 @@
 
     <div id="app" class="col-md-10 offset-md-1">
         <button v-on:click="btnAddClick" >추가</button>
+        <label for="">이름</label>    <input type="text" name="" id="" v-model:value="name">
+        <label for="">전화번호</label><input type="text" name="" id="" v-model:value="tel">
+        <label for="">주소</label>    <input type="text" name="" id="" v-model:value="address">
         <table id="list" class="table-bordered">
             <thead>
                 <tr class="bg-warning text-white text-center">
@@ -73,6 +76,9 @@
                 {name: "설현", tel: "010-3456-8200", address: "서현"},
                 {name: "혜리", tel: "010-3456-8299", address: "서리"},
             ],
+            name: null,
+            tel: null,
+            address: null,
         },
         //template: ``,
         methods: {
@@ -80,29 +86,13 @@
                 console.log(event.target);
 
                 var obj = {
-                    name: "하니",
-                    tel: "010-3456-8250",
-                    address: "서현",
+                    name: this.$data.name,
+                    tel: this.$data.tel,
+                    address: this.$data.address,
                 };
                 // this.$data.contacts[ this.$data.contacts.length ] = obj;
                 this.$set( this.$data.contacts, this.$data.contacts.length, obj );
             }
-        },
-        components: {
-            /* 컴포넌트 등록. 예시) "태그명" : 컴포넌트명 */
-
-        },
-        computed: {
-
-        },
-        watch: {
-
-        },
-        mounted: function() {
-            console.log("mounted");
-        },
-        updated: function() {
-            console.log("updated");
         },
     });
 
