--- a/Vuejs/vue28지시자실습/vue28-ex-01.표준이벤트등록.html
+++ b/Vuejs/vue28지시자실습/vue28-ex-01.표준이벤트등록.html
@@ -223,6 +223,9 @@
             },
             selectchange: function(event){
                 console.log(event.target);
+                //debugger;
+                //this.$data.img_select = event.target.value;
+                this.$set( this.$data, "img_select", event.target.value );
             },
         },
         components: {
